# open_target_graph

./: .gitignore  Dockerfile.dagster  Dockerfile.streamlit  README.md  Untitled.ipynb  ci.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/: Pulumi.yaml  __main__.py
open_target_graph/: definitions.py
open_target_graph/agents/: researcher.py  workflow.py
open_target_graph/assets/db/: postgres.py
open_target_graph/assets/ingestion/: chembl.py  uniprot.py
open_target_graph/assets/modeling/: inference.py
open_target_graph/dashboard/: app.py
prompts/: initial_idea.md
tests/: test_agents.py  test_app.py  test_debug.py  test_inference.py
