[project]
name = "open_target_graph"
version = "0.1.0"
description = "AI-Driven Drug Discovery Platform using Dagster and Polars"
authors = [{name = "Ed Chalstrey", email = "edwardchalstrey@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "dagster-cloud",
    "polars",
    "requests",
    "pyarrow",
    "torch",
    "transformers",
    "streamlit",
    "stmol",
    "py3Dmol",
    "scikit-learn",
    "plotly",
    "ipython_genutils",
    "nbformat"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
    "pytest-mock"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["open_target_graph"]

[tool.dagster]
module_name = "open_target_graph.definitions"